[gd_scene load_steps=5 format=2]

[ext_resource path="res://Game/Scenes/Location/Display.gd" type="Script" id=1]
[ext_resource path="res://Game/Scenes/LocationType/Display.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/Graphics/LocationType/Visited.png" type="Texture" id=3]
[ext_resource path="res://Game/Graphics/LocationType/icon/Danger.png" type="Texture" id=4]

[node name="Node2D" type="Node2D" groups=["LocationContext"]]
script = ExtResource( 1 )

[node name="LocationType" parent="." instance=ExtResource( 2 )]
modulate = Color( 1, 1, 1, 0.223529 )
texture = ExtResource( 4 )

[node name="VisitedIndicator" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[node name="SelectButton" type="TextureButton" parent="."]
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[connection signal="pressed" from="SelectButton" to="." method="_on_SelectButton_pressed"]
